# libstrings

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac  libstrings.pc.in
include/: libstrings.h
src/: strings.c  test-strings.c
windows/: Makefile
